# swift-type

./: CHANGELOG.md  README.md  index.html  package-lock.json  package.json  repomix-output.xml  repomix.config.json
.github/workflows/: release.yaml
scripts/: sync-version.js
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  keyboard_hook.rs  lib.rs  main.rs  text_injector.rs  trigger_engine.rs
src/components/layout/: Sidebar.tsx
src/components/modals/: SnippetEditor.tsx
src/components/ui/: Button.tsx  IconButton.tsx  Toggle.tsx
src/components/views/: SettingsView.tsx  SnippetsView.tsx
src/styles/: EmptyState.css  SettingsView.css  Sidebar.css  SnippetEditor.css  SnippetsView.css  Toggle.css  TopBar.css  base.css  forms.css  ui.css  variables.css
